theora-java/vorbis_headers/vorbis/vorbisenc.h

#define _OV_ENC_H_
extern int vorbis_encode_init(vorbis_info *vi,
			      long channels,
			      long rate,

			      long max_bitrate,
			      long nominal_bitrate,
			      long min_bitrate);