theora-java/src/net/sf/theora_java/jna/VorbisLibrary.java

package net.sf.theora_java.jna;

import net.sf.theora_java.jna.OggLibrary.ogg_stream_state;
import net.sf.theora_java.jna.OggLibrary.ogg_sync_state;
import net.sf.theora_java.jna.OggLibrary.oggpack_buffer;

import com.sun.jna.Native;
import com.sun.jna.NativeLong;
import com.sun.jna.Pointer;
import com.sun.jna.Structure;
import com.sun.jna.ptr.PointerByReference;

/**
 * JNA wrapper for libvorbis.  Includes codec.h, vorbisenc.h, vorbisfile.h
 * @author Ken Larson
 *
 */
public interface VorbisLibrary extends XiphLibrary
{
	
    public static final VorbisLibrary INSTANCE = (VorbisLibrary) Native.loadLibrary("vorbis", VorbisLibrary.class);


    // codec.h:
    
    /********************************************************************
     *                                                                  *
     * THIS FILE IS PART OF THE OggVorbis SOFTWARE CODEC SOURCE CODE.   *
     * USE, DISTRIBUTION AND REPRODUCTION OF THIS LIBRARY SOURCE IS     *
     * GOVERNED BY A BSD-STYLE SOURCE LICENSE INCLUDED WITH THIS SOURCE *
     * IN 'COPYING'. PLEASE READ THESE TERMS BEFORE DISTRIBUTING.       *
     *                                                                  *
     * THE OggVorbis SOURCE CODE IS (C) COPYRIGHT 1994-2001             *
     * by the XIPHOPHORUS Company http://www.xiph.org/                  *

     ********************************************************************

     function: libvorbis codec headers
     last mod: $Id: VorbisLibrary.java,v 1.1 2007/08/28 15:48:21 kenlars99 Exp $

     ********************************************************************/

//    #ifndef _vorbis_codec_h_
//    #define _vorbis_codec_h_
//
//    #ifdef __cplusplus
//    extern "C"
//    {
//    #endif /* __cplusplus */
//
//    #include <ogg/ogg.h>

    public static class vorbis_info extends Structure
	{
      public int version;
      public int channels;
      public NativeLong /*long*/ rate;

      /* The below bitrate declarations are *hints*.
         Combinations of the three values carry the following implications:

         all three set to the same value:
           implies a fixed rate bitstream
         only nominal set:
           implies a VBR stream that averages the nominal bitrate.  No hard
           upper/lower limit
         upper and or lower set:
           implies a VBR bitstream that obeys the bitrate limits. nominal
           may also be set to give a nominal rate.
         none set:
           the coder does not care to speculate.
      */

      public NativeLong /*long*/ bitrate_upper;
      public NativeLong /*long*/ bitrate_nominal;
      public NativeLong /*long*/ bitrate_lower;
      public NativeLong /*long*/ bitrate_window;

      public Pointer /*void**/ codec_setup;
    }

    /* vorbis_dsp_state buffers the current vorbis audio
       analysis/synthesis state.  The DSP state belongs to a specific
       logical bitstream ****************************************************/
    public static class vorbis_dsp_state extends Structure
	{
    	public int analysisp;
    	public Pointer /*vorbis_info **/ vi;

    	public Pointer /*float***/ pcm;
    	public Pointer /*float***/ pcmret;
    	public int      pcm_storage;
    	public int      pcm_current;
    	public int      pcm_returned;

    	public int  preextrapolate;
    	public int  eofflag;

    	public NativeLong /*long*/ lW;
    	public NativeLong /*long*/ W;
    	public NativeLong /*long*/ nW;
    	public NativeLong /*long*/ centerW;

    	public long /*ogg_int64_t*/ granulepos;
    	public long /*ogg_int64_t*/ sequence;

    	public long /*ogg_int64_t*/ glue_bits;
    	public long /*ogg_int64_t*/ time_bits;
    	public long /*ogg_int64_t*/ floor_bits;
    	public long /*ogg_int64_t*/ res_bits;

    	public Pointer /*void       **/backend_state;
    }

    public static class vorbis_block extends Structure
	{
      /* necessary stream state for linking to the framing abstraction */
    	public Pointer /*float  ***/ pcm;       /* this is a pointer into local storage */
    	public oggpack_buffer opb;

    	public NativeLong /*long*/  lW;
    	public NativeLong /*long*/  W;
    	public NativeLong /*long*/  nW;
    	public int   pcmend;
    	public int   mode;

    	public int         eofflag;
    	public long /*ogg_int64_t*/ granulepos;
    	public long /*ogg_int64_t*/ sequence;
    	public Pointer /*vorbis_dsp_state **/ vd; /* For read-only access of configuration */

      /* local storage to avoid remallocing; it's up to the mapping to
         structure it */
    	public Pointer /*void               **/ localstore;
    	public NativeLong /*long*/                localtop;
    	public NativeLong /*long*/                localalloc;
    	public NativeLong /*long*/                totaluse;
    	public Pointer /*struct alloc_chain **/ reap;

      /* bitmetrics for the frame */
    	public NativeLong /*long*/ glue_bits;
    	public NativeLong /*long*/ time_bits;
    	public NativeLong /*long*/ floor_bits;
    	public NativeLong /*long*/ res_bits;

    	public Pointer /*void**/ internal;

    }

    /* vorbis_block is a single block of data to be processed as part of
    the analysis/synthesis stream; it belongs to a specific logical
    bitstream, but is independant from other vorbis_blocks belonging to
    that logical bitstream. *************************************************/

    public static class alloc_chain extends Structure
	{
    	public Pointer /*void**/ ptr;
    	public Pointer /*struct alloc_chain **/ next;
    }

    /* vorbis_info contains all the setup information specific to the
       specific compression/decompression mode in progress (eg,
       psychoacoustic settings, channel setup, options, codebook
       etc). vorbis_info and substructures are in backends.h.
    *********************************************************************/

    /* the comments are not part of vorbis_info so that vorbis_info can be
       static storage */
    public static class vorbis_comment extends Structure
	{
      /* unlimited user comment fields.  libvorbis writes 'libvorbis'
         whatever vendor is set to in encode */
    	public Pointer /* char ***/user_comments;
    	public Pointer /*int   **/ comment_lengths;
    	public int    comments;
    	public Pointer /*char  **/ vendor;

    } 

    /* libvorbis encodes in two abstraction layers; first we perform DSP
       and produce a packet (see docs/analysis.txt).  The packet is then
       coded into a framed OggSquish bitstream by the second layer (see
       docs/framing.txt).  Decode is the reverse process; we sync/frame
       the bitstream and extract individual packets, then decode the
       packet back into PCM audio.

       The extra framing/packetizing is used in streaming formats, such as
       files.  Over the net (such as with UDP), the framing and
       packetization aren't necessary as they're provided by the transport
       and the streaming layer is not used */

    /* Vorbis PRIMITIVES: general ***************************************/

    void     vorbis_info_init(vorbis_info vi);
    void     vorbis_info_clear(vorbis_info vi);
    int      vorbis_info_blocksize(vorbis_info vi,int zo);
    void     vorbis_comment_init(vorbis_comment vc);
    void     vorbis_comment_add(vorbis_comment vc, Pointer /*char **/ comment);
    void     vorbis_comment_add_tag(vorbis_comment vc,
    				       Pointer /*char **/ tag, Pointer /*char **/ contents);
    Pointer /*char **/ vorbis_comment_query(vorbis_comment vc, Pointer /*char **/ tag, int count);
    int      vorbis_comment_query_count(vorbis_comment vc, Pointer /*char **/ tag);
    void     vorbis_comment_clear(vorbis_comment vc);

    int      vorbis_block_init(vorbis_dsp_state v, vorbis_block vb);
    int      vorbis_block_clear(vorbis_block vb);
    void     vorbis_dsp_clear(vorbis_dsp_state v);
    double   vorbis_granule_time(vorbis_dsp_state v,
    				    long /*ogg_int64_t*/ granulepos);

    /* Vorbis PRIMITIVES: analysis/DSP layer ****************************/

    int      vorbis_analysis_init(vorbis_dsp_state v,vorbis_info vi);
    int      vorbis_commentheader_out(vorbis_comment vc, ogg_packet op);
    int      vorbis_analysis_headerout(vorbis_dsp_state v,
    					  vorbis_comment vc,
    					  ogg_packet op,
    					  ogg_packet op_comm,
    					  ogg_packet op_code);
    Pointer /*float  ***/ vorbis_analysis_buffer(vorbis_dsp_state v,int vals);
    int      vorbis_analysis_wrote(vorbis_dsp_state v,int vals);
    int      vorbis_analysis_blockout(vorbis_dsp_state v,vorbis_block vb);
    int      vorbis_analysis(vorbis_block vb,ogg_packet op);

    int      vorbis_bitrate_addblock(vorbis_block vb);
    int      vorbis_bitrate_flushpacket(vorbis_dsp_state vd,
    					   ogg_packet op);

    /* Vorbis PRIMITIVES: synthesis layer *******************************/
    int      vorbis_synthesis_headerin(vorbis_info vi,vorbis_comment vc,
    					  ogg_packet op);

    int      vorbis_synthesis_init(vorbis_dsp_state v,vorbis_info vi);
    int      vorbis_synthesis_restart(vorbis_dsp_state v);
    int      vorbis_synthesis(vorbis_block vb,ogg_packet op);
    int      vorbis_synthesis_trackonly(vorbis_block vb,ogg_packet op);
    int      vorbis_synthesis_blockin(vorbis_dsp_state v,vorbis_block vb);
    int      vorbis_synthesis_pcmout(vorbis_dsp_state v,PointerByReference /*float ****/ pcm);
    int      vorbis_synthesis_lapout(vorbis_dsp_state v,PointerByReference /*float ****/ pcm);
    int      vorbis_synthesis_read(vorbis_dsp_state v,int samples);
    NativeLong /*long*/     vorbis_packet_blocksize(vorbis_info vi,ogg_packet p);

    int      vorbis_synthesis_halfrate(vorbis_info v,int flag);
    int      vorbis_synthesis_halfrate_p(vorbis_info v);

    /* Vorbis ERRORS and return codes ***********************************/

    public static final int OV_FALSE      =-1;
    public static final int OV_EOF        =-2;
    public static final int OV_HOLE       =-3;

    public static final int OV_EREAD      =-128;
    public static final int OV_EFAULT     =-129;
    public static final int OV_EIMPL      =-130;
    public static final int OV_EINVAL     =-131;
    public static final int OV_ENOTVORBIS =-132;
    public static final int OV_EBADHEADER =-133;
    public static final int OV_EVERSION   =-134;
    public static final int OV_ENOTAUDIO  =-135;
    public static final int OV_EBADPACKET =-136;
    public static final int OV_EBADLINK   =-137;
    public static final int OV_ENOSEEK    =-138;

//    #ifdef __cplusplus
//    }
//    #endif /* __cplusplus */
//
//    #endif


    
    // vorbisenc.h:
    
    /********************************************************************
     *                                                                  *
     * THIS FILE IS PART OF THE OggVorbis SOFTWARE CODEC SOURCE CODE.   *
     * USE, DISTRIBUTION AND REPRODUCTION OF THIS LIBRARY SOURCE IS     *
     * GOVERNED BY A BSD-STYLE SOURCE LICENSE INCLUDED WITH THIS SOURCE *
     * IN 'COPYING'. PLEASE READ THESE TERMS BEFORE DISTRIBUTING.       *
     *                                                                  *
     * THE OggVorbis SOURCE CODE IS (C) COPYRIGHT 1994-2001             *
     * by the XIPHOPHORUS Company http://www.xiph.org/                  *
     *                                                                  *
     ********************************************************************

     function: vorbis encode-engine setup
     last mod: $Id: VorbisLibrary.java,v 1.1 2007/08/28 15:48:21 kenlars99 Exp $

     ********************************************************************/

//    #ifndef _OV_ENC_H_
//    #define _OV_ENC_H_
//
//    #ifdef __cplusplus
//    extern "C"
//    {
//    #endif /* __cplusplus */
//
//    #include "codec.h"

    int vorbis_encode_init(vorbis_info vi,
    			      NativeLong /*long*/ channels,
    			      NativeLong /*long*/ rate,
